--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,12 @@ section {
     margin: -500;
     margin-top: -400px;
     z-index: 9999999;
+    font-weight: bold;
 }
 
 .nav>li {
     display: inline-block;
+    color: #666;
 }
 #heading h1 {
  font-size: 2.5em;
@@ -74,6 +76,22 @@ h2:hover {
     opacity: .75;
 
 }
+
+a {
+    color: #666;
+    background: transparent;
+};
+
+#one p{
+    font-family: 'Patrick Hand SC', cursive;
+}
+
+#two p {
+    font-family: 'Patrick Hand SC', cursive;
+    text-align: justify;
+}
+
+
 
 
 /*#logo {
