--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,17 @@ section {
 #heading h1 {
  font-size: 2.5em;
 }
+#heading h1 {
+ font-size: 2.5em;
+}
+
+#hero h6 {
+    font-family: 'Patrick Hand SC', cursive;
+
+}
 #hero{
     height:calc(100%-50px);
+
 }
 
 .clearfix:after {
