--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,9 +101,21 @@ a {
 }
 
 
+/*--------------------------*/
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
 
 
-/*#logo {
-    margin-top:-50%;
 
-}*/
+
+ }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { ... }
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { ... }
